Fixed divs covering and added oferta div

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,7 @@
 #myGallery {
 	width: 100%;
 	height: 100%;
+  z-index: 0;
 }
 #myGallery img {
 	border: 2px solid #52697E;
