--- a/css/layout.css
+++ b/css/layout.css
@@ -44,6 +44,7 @@ body {
 	height: 1000px;
 	margin: 0 auto;
 	text-align: left;
+	z-index: -1;
 }
 h1 {
 	font-size: 21px;
@@ -134,4 +135,13 @@ h1 {
 }
 .tab dt {
 	margin-top: 16px;
+}
+
+.oferta {
+	width: 100%;
+	height: 800px;
+	position: absolute;
+	top: 500px;
+	text-align: center;
+	z-index: 1;
 }
